chore: users can edit chats now
